# rust-basics

./: .gitignore  Cargo.toml
data/: file.txt  taxables.csv
src/: conditionals.rs  csvs.rs  functions.rs  lib.rs  main.rs  string_types.rs  structs.rs  vectors.rs
src/the_book/: errors.rs  functional_programming.rs  mod.rs  ownership.rs  unit_test.rs
src/traversy/: arrays.rs  cli.rs  conditionals.rs  csvs.rs  enums.rs  loops.rs  mod.rs  pattern_matching.rs  pointers.rs  scope.rs  string_formatting.rs  string_types.rs  structs.rs
tests/: test_functions.rs
