[package]
name = "rust-basics"
version = "0.1.0"
authors = ["bjk95 <bjkester@me.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = "1.0.106"
serde_derive = "1.0.106"

[dev-dependencies]
serde = { version = "1.0.55", features = ["derive"] }